# fl_codepush_box

./: .gitignore  .gitmodules  Cargo.toml  Makefile  PLAN.md  README.md  fl_codepush_box.code-workspace  handoff.md  progress.md
.github/workflows/: android_emulator.yml  desktop.yml  e2e_x64.yml  flutter_package.yml  ios_simulator.yml  rust.yml  server.yml  server_s3.yml  workflows_lint.yml
cli/: Cargo.toml
cli/src/: aot_entry_points.rs  auto.rs  bytecode_payload.rs  inspect.rs  main.rs  patch_report_tests.rs
crates/fcb_bytecode/: Cargo.toml
crates/fcb_bytecode/src/: compiler.rs  format.rs  lib.rs  linker.rs  opcodes.rs
crates/fcb_core/: Cargo.toml
crates/fcb_core/src/: build_info.rs  bytecode.rs  bytecode_tests.rs  config.rs  crypto.rs  diff.rs  lib.rs  linker.rs  manifest.rs  server_api.rs  state.rs  state_tests.rs
crates/fcb_core/tests/: schema_required.rs
dart_sdk_patch/: README.md  test_runtime.sh
docs/: apple_compliance.md  architecture_decisions.md  backends.md  ios_distribution.md  key_rotation_design.md  known_issues.md  operations.md
engine_patch/android/: BUILD.gn.snippet  ENGINE_INTEGRATION.md  README.md  apply_engine_patch.sh  apply_patches.sh  apply_to_engine.py  fcb_android_jni.cc  fcb_engine_hook.cc  fcb_engine_hook.h  fcb_engine_hook_test.cc  flutter_engine_current.patch  test_apply_engine_patch.sh  test_verify_engine_patch.sh  verify_engine_patch.sh
engine_patch/android/gn/: BUILD.gn
engine_patch/android/patches/: 0001-switches-cc-fcb-patch-path.patch  0002-flutter-loader-java-fcb-init.patch
engine_patch/ios/: BUILD.gn.snippet  README.md
examples/counter_app/: .metadata  README.md  fcb.yaml  pubspec.yaml
examples/counter_app/android/: gradle.properties
examples/counter_app/lib/: main.dart  pricing_source.dart
examples/counter_app/test/: widget_test.dart
plans/: README.md  phase_e_async_await.md  phase_e_dart_vm.md  phase_e_frontend_and_generators.md  phase_f_server_multitenancy.md  phase_g_client_resilience.md  phase_h_vendor_ci_devices.md  phase_x_multiplatform.md
schemas/: fcb.yaml.schema.json  patch_manifest.schema.json  release_manifest.schema.json
scripts/: accept_android_arm64.sh  accept_phase_d_android_arm64.sh  audit_plan_completion.sh  audit_vendor_dart_sdk_delta.sh  bootstrap.sh  bootstrap_engine_min_deps.sh  bootstrap_phase_d_engine_min_deps.sh  build_android_engine.sh  build_desktop_updater.sh  build_ios_engine.sh  build_macos_fcb_engine.sh  build_phase_d_android_engine.sh  check_android_arm64_device.sh  check_github_actions_evidence.sh  check_github_actions_inventory.sh  check_kernel_compile_fixture_size.sh  check_macos_metal_toolchain.sh  check_phase_d_android_arm64_device.sh  check_phase_e_completion.sh  check_phase_e_host_evidence.sh  check_phase_h_runbooks.sh  check_workflows.sh  ci_local_core.sh  fcb_vm_test_filters.sh  full_arm64_drill.sh  full_ios_drill.sh  install_android_bytecode_patch.sh  install_phase_d_android_bytecode_patch.sh  record_testflight_evidence.sh  record_vendor_rebase_evidence.sh  record_vm_patch_evidence.sh  server_backup.sh  server_restore.sh  sync_dart_vm_patch.sh  sync_flutter_engine.sh  sync_flutter_engine_deps.sh  test_admin_runtime.sh  test_android.sh  test_android_arm64.sh  test_android_interpret_failure.sh  (+11 more)
server/: auth.go  go.mod  go.sum  handlers.go  main.go  main_test.go  storage.go  store.go  types.go  util.go  webui.go
server/webui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
server/webui/src/: App.svelte  styles.css
tests/e2e/: PHASE_B.md  force_extract_native_libs.py  phase_b_preflight.sh  phase_b_vm_env.sh  test_android_native_packaging.sh  test_android_plugin_paths.sh  test_counter_app_phase_b_contract.sh  test_e2e.sh  test_force_extract_native_libs.sh  test_kernel_business_stream_e2e.sh  test_kernel_compile_from_plan.sh  test_phase_b_android.sh  test_phase_b_android_dry_run.sh  test_phase_b_android_helpers.sh  test_phase_b_local.sh  test_phase_b_preflight.sh  test_phase_e_completion_gate.sh  test_phase_e_host_evidence_gate.sh  verify_phase_b_evidence.sh
tests/e2e/kernel_compile_from_plan/: assert_binary.py  assert_generator_for_in_sources.py  assert_generator_sources.py  assert_module.py  assert_module_async_branch.py  assert_module_async_future.py  assert_module_async_generators.py  assert_module_async_loops.py  assert_module_collection_calls.py  assert_module_collection_label_calls.py  assert_module_collection_switch.py  assert_module_core_calls.py  assert_module_generator_for_in.py  assert_module_object_calls.py  assert_module_stream_generators.py  assert_plan_async_branch_sources.py  assert_plan_async_control.py  assert_plan_async_expression_sources.py  assert_plan_async_loop_sources.py  assert_plan_async_loop_switch_sources.py  (+12 more)
tool/: fcb_binary_module_writer.dart  fcb_kernel_async_expr.dart  fcb_kernel_async_for_expr.dart  fcb_kernel_async_loop_expr.dart  fcb_kernel_callback_inline.dart  fcb_kernel_closure_audit.dart  fcb_kernel_collection_append_expr.dart  fcb_kernel_collection_expr.dart  fcb_kernel_generator_expr.dart  fcb_kernel_generator_for_expr.dart  fcb_kernel_generator_for_in_body_expr.dart  fcb_kernel_generator_loop_expr.dart  fcb_kernel_generator_stream_expr.dart  fcb_kernel_generator_yield_expr.dart  fcb_kernel_logical_expr.dart  fcb_kernel_manifest.dart  fcb_kernel_manifest_compiler.dart  fcb_kernel_manifest_control_compiler.dart  fcb_kernel_reader.dart  fcb_kernel_reader_bundle.dart  fcb_kernel_reader_text.dart  fcb_kernel_returning_closure.dart  fcb_kernel_statement_expr.dart  fcb_kernel_static_invocation_expr.dart  fcb_kernel_switch_expr.dart  fcb_kernel_switch_statement_expr.dart  fcb_kernel_type_names.dart  fcb_kernel_unary_binary_expr.dart  fcb_kernel_unsupported_audit.dart
updater/: Cargo.toml
updater/src/: lib.rs  tests.rs
updater/tests/: rollback_events.rs
(+201 files in other folders)
