[package]
name = "fcb"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fcb_core = { path = "../crates/fcb_core" }
fcb_bytecode = { path = "../crates/fcb_bytecode" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
