[package]
name = "fcb_updater"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = ["snapshot_replace"]
snapshot_replace = ["fcb_core/snapshot_replace"]

[dependencies]
base64 = "0.22"
fcb_core = { path = "../crates/fcb_core", default-features = false }
serde_json = "1"
