[package]
name = "fcb_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }

