[package]
name = "fcb_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
bsdiff = "0.2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
getrandom = "0.4"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
thiserror = "2"
ureq = { version = "3", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
zstd = "0.13"
