[package]
name = "fcb_core"
version.workspace = true
edition.workspace = true
license.workspace = true

# ADR-#3: snapshot_replace is enterprise/internal-only and not store-compliant.
# It is a default feature so dev/test/e2e are unchanged, but store builds can
# drop it (and its bsdiff/zstd deps) via `--no-default-features`.
[features]
default = ["snapshot_replace"]
snapshot_replace = ["dep:bsdiff", "dep:zstd"]

[dependencies]
base64 = "0.22"
bsdiff = { version = "0.2", optional = true }
ed25519-dalek = { version = "2", features = ["rand_core"] }
getrandom = "0.4"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
thiserror = "2"
ureq = { version = "3", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
zstd = { version = "0.13", optional = true }
